<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/very_light_pink">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/toolbar"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/d15">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border_round_light_gray"
            android:padding="@dimen/d15"
            android:visibility="gone">
            <com.boardinglabs.mireta.standalone.component.fontview.RobotoBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/topup_saldo_txt"
                android:textSize="@dimen/s12"
                android:text="@string/topup_saldo"
                android:textStyle="bold"/>
            <com.boardinglabs.mireta.standalone.component.fontview.RobotoBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/topup_saldo"
                android:text="Rp.0"
                android:textStyle="bold"
                android:textSize="@dimen/s12"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border_round_light_gray"
            android:padding="@dimen/d15"
            android:layout_marginTop="@dimen/d15"
            android:visibility="gone">
            <com.boardinglabs.mireta.standalone.component.fontview.RobotoRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/s12"
                android:id="@+id/info_saldo"
                android:text="Info Saldo"/>
            <com.boardinglabs.mireta.standalone.component.fontview.RobotoRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/s10"
                android:layout_marginTop="@dimen/d10"
                android:text="@string/order_id"/>
            <com.boardinglabs.mireta.standalone.component.fontview.RobotoBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/s14"
                android:textStyle="bold"
                android:text="1234"
                android:id="@+id/order_id_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/container_review"
            android:layout_marginTop="@dimen/d15"
            android:orientation="vertical"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/border_round_light_gray"
                android:padding="@dimen/d15">
                <com.boardinglabs.mireta.standalone.component.fontview.RobotoBoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="DETIL PEMBAYARAN"
                    android:layout_marginBottom="@dimen/d10"
                    android:textColor="@color/black"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/d15"
                    android:layout_marginBottom="@dimen/d5">
                    <com.boardinglabs.mireta.standalone.component.fontview.RobotoBoldTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/topup_saldo_small"/>
                    <com.boardinglabs.mireta.standalone.component.fontview.RobotoBoldTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:id="@+id/amount_topup"
                        android:textStyle="bold"
                        android:text="0"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/d20"
                    android:paddingHorizontal="@dimen/d15"
                    android:layout_marginBottom="@dimen/d5">
                    <com.boardinglabs.mireta.standalone.component.fontview.RobotoBoldTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/unique_text"
                        android:text="@string/unique_code"/>
                    <com.boardinglabs.mireta.standalone.component.fontview.RobotoBoldTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:id="@+id/unique_topup"
                        android:textStyle="bold"
                        android:text="0"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/d20"
                    android:visibility="gone"
                    android:layout_marginBottom="@dimen/d5">
                    <com.boardinglabs.mireta.standalone.component.fontview.RobotoBoldTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/biaya_layanan"/>
                    <com.boardinglabs.mireta.standalone.component.fontview.RobotoBoldTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/fee"
                        android:layout_alignParentRight="true"
                        android:textStyle="bold"
                        android:text="0"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/d20"
                    android:layout_marginBottom="@dimen/d5"
                    android:visibility="gone">
                    <com.boardinglabs.mireta.standalone.component.fontview.RobotoBoldTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/voucher"/>
                    <com.boardinglabs.mireta.standalone.component.fontview.RobotoBoldTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/red_btn_bg_color"
                        android:id="@+id/amount_voucher_topup"
                        android:textStyle="bold"
                        android:text="0"/>

                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/starDust_opacity_40"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_round_blue_gradient"
                    android:layout_marginTop="@dimen/d10"
                    android:padding="@dimen/d5">
                    <com.boardinglabs.mireta.standalone.component.fontview.RobotoBoldTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/s16"
                        android:textStyle="bold"
                        android:drawableLeft="@drawable/ic_dollar_circle"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/d10"
                        android:text="  TOTAL"/>
                    <com.boardinglabs.mireta.standalone.component.fontview.RobotoBoldTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:textSize="@dimen/s16"
                        android:id="@+id/total_amount"
                        android:paddingRight="@dimen/d10"
                        android:textStyle="bold"
                        android:text="0.00"
                        android:textColor="@color/white"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/dropdown_bank_list"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:visibility="visible">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="PILIH BANK"
                android:layout_marginBottom="10dp"/>
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/list_bank"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_round_blue_gradient"
            android:textColor="@color/white"
            android:id="@+id/next_btn"
            android:layout_marginTop="@dimen/d15"
            android:text="BAYAR"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>